[tool.poetry]
name = "amass"
version = "0.1.0"
description = "Browse package repositories."
authors = ["Mark Cottman-Fields <cofiem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0a1"
colorama = "^0.4.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
coverage = "^6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
